Кнопка футр фокус

--- a/css/style.css
+++ b/css/style.css
@@ -670,7 +670,8 @@ img {
 
   transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-footer__btn:hover .send {
+.form-footer__btn:hover .send,
+.form-footer__btn:focus .send{
   fill: var(--activeColor);
 }
 
