--- a/css/style.css
+++ b/css/style.css
@@ -819,8 +819,15 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
+  padding: 12px 16px;
   margin-bottom: 20px;
   transition: border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-modal__text::placeholder {
+  font-size: 14px;
+  line-height: 0.9;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 .form-modal__field {
   position: relative;
